banner & size cheged

--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -10336,7 +10336,7 @@ nav ul li a:hover {
 
 /*-- banner --*/
 .w3l-banner {
-  background: url(https://cdn.pixabay.com/photo/2020/05/28/15/56/digitization-5231610_960_720.jpg) no-repeat center;
+  background: url(https://img.freepik.com/free-photo/silhouette-drone-flying-city-sunset_51195-3400.jpg?w=996) no-repeat center;
   -ms-background-size: cover;
   background-size: cover;
   z-index: 0;
